syntax = "proto3";

option go_package = "genproto";

package car_wash;

message Filter{
    int32 limit = 1;
    int32 offset = 2;
}

message GetById{
    string id = 1;
}

message Empty{}

message GeoPoint {
    double latitude = 1;
    double longitude = 2;
}
